--- a/charts/systems-information/templates/clusterrolebinding.yaml
+++ b/charts/systems-information/templates/clusterrolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: cluster-owner
 subjects:
   - kind: ServiceAccount
     name: systems-information
