added rancher namespace variable

--- a/charts/systems-information/questions.yml
+++ b/charts/systems-information/questions.yml
@@ -85,3 +85,9 @@ questions:
   label: From address
   required: true
   group: "Mail Server Settings"
+- variable: rancher_namespace
+  default: "cattle-system"
+  type: string
+  label: Rancher namespace
+  require: false
+  group: "General Settings"
